// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feedback/> should render 1`] = `
<div>
  <div
    class="sc-gtsrHT dDJuxj sc-amkrK gNdCMk"
  >
    <div
      class="sc-bdnxRM bCGhmq"
    >
      <div
        class="sc-jSFjdj dftIwI"
      >
        <div
          class="sc-dkuGKe fEiSsE"
        >
          <h2
            class="sc-gJpXkD iUHkCs sc-iCoGMd jQIZyR"
            data-testid="heading"
          >
            <span
              class="sc-gKAaRy hLlvoX"
              data-testid="stripe"
            />
            Avez-vous trouvé la réponse à votre question ?
          </h2>
          <p
            class="sc-fyjqAk enUuZt"
          >
            <button
              class="sc-hiKfDv fEdXfT sc-iXeHaJ bA-dtBg"
            >
              Non
            </button>
            <button
              class="sc-hiKfDv fEdXfT sc-iXeHaJ bA-dtBg"
            >
              Oui
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer no 1`] = `
<div>
  <div
    class="sc-gtsrHT dDJuxj sc-amkrK gNdCMk"
  >
    <div
      class="sc-bdnxRM bCGhmq"
    >
      <div
        class="sc-jSFjdj dftIwI"
      >
        <div
          class="sc-dkuGKe fEiSsE"
        >
          <h2
            class="sc-gJpXkD iUHkCs sc-iCoGMd jQIZyR"
            data-testid="heading"
          >
            <span
              class="sc-gKAaRy hLlvoX"
              data-testid="stripe"
            />
            Merci pour votre réponse.
          </h2>
        </div>
        <form>
          <fieldset
            class="sc-kmIPcE giONAY"
          >
            <legend
              class="sc-cwiweh eDMgNg"
            >
              Pouvez-vous nous en dire plus ?
            </legend>
            <label
              class="sc-xGAEC bynoea"
              for="unclear"
            >
              <input
                class="sc-dWBRfb cbFWSR"
                id="unclear"
                name="category"
                type="checkbox"
                value="unclear"
              />
              Les informations ne sont pas claires.
            </label>
            <label
              class="sc-xGAEC bynoea"
              for="unrelated"
            >
              <input
                class="sc-dWBRfb cbFWSR"
                id="unrelated"
                name="category"
                type="checkbox"
                value="unrelated"
              />
              Cette page ne correspond pas à ma recherche ou à ma situation.
            </label>
            <label
              class="sc-xGAEC bynoea"
              for="unsatisfied"
            >
              <input
                class="sc-dWBRfb cbFWSR"
                id="unsatisfied"
                name="category"
                type="checkbox"
                value="unsatisfied"
              />
              Je ne suis pas satisfait de cette réglementation.
            </label>
            <label
              class="sc-xGAEC bynoea"
              for="wrong"
            >
              <input
                class="sc-dWBRfb cbFWSR"
                id="wrong"
                name="category"
                type="checkbox"
                value="wrong"
              />
              Les informations me semblent fausses.
            </label>
          </fieldset>
          <label
            class="sc-tsGVs kmoLfe"
            for="suggestion"
          >
            Faire une suggestion pour améliorer cette page
          </label>
          <textarea
            class="sc-gkCoMD hEtVyO sc-bUQyIj lbcyhC"
            cols="50"
            id="suggestion"
            maxlength="150"
            name="suggestion"
            placeholder="Une idée, une suggestion..."
            rows="3"
          />
          <div>
            <span
              class="sc-bBjRSN kXKqEt"
            >
              150
               caractères restants
            </span>
            <div
              class="sc-gXfVKN gNNUJi"
              role="status"
            >
              150
               caractères restants
            </div>
          </div>
          <div
            class="sc-dSnXvR kYyBno"
          >
            <button
              class="sc-hiKfDv jPHFJK sc-iXeHaJ bA-dtBg"
            >
              Envoyer
            </button>
          </div>
        </form>
        <p>
          Pour obtenir une réponse à votre question de droit du travail, nous vous invitons à joindre
           
          <button
            class="sc-hiKfDv kQaPVm"
            type="button"
          >
            les services du ministère du Travail en région
            <svg
              aria-hidden="true"
              fill="none"
              viewBox="0 0 28 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
                fill="currentColor"
              />
            </svg>
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer yes 1`] = `
<div>
  <div
    class="sc-gtsrHT dDJuxj sc-amkrK gNdCMk"
  >
    <div
      class="sc-bdnxRM bCGhmq"
    >
      <div
        class="sc-jSFjdj dftIwI"
      >
        <div
          class="sc-dkuGKe fEiSsE"
        >
          <h2
            class="sc-gJpXkD iUHkCs sc-iCoGMd jQIZyR"
            data-testid="heading"
          >
            <span
              class="sc-gKAaRy hLlvoX"
              data-testid="stripe"
            />
            Merci pour votre réponse.
          </h2>
        </div>
        <form>
          <label
            class="sc-tsGVs kmoLfe"
            for="suggestion"
          >
            Faire une suggestion pour améliorer cette page
          </label>
          <textarea
            class="sc-gkCoMD hEtVyO sc-bUQyIj lbcyhC"
            cols="50"
            id="suggestion"
            maxlength="150"
            name="suggestion"
            placeholder="Une idée, une suggestion..."
            rows="3"
          />
          <div>
            <span
              class="sc-bBjRSN kXKqEt"
            >
              150
               caractères restants
            </span>
            <div
              class="sc-gXfVKN gNNUJi"
              role="status"
            >
              150
               caractères restants
            </div>
          </div>
          <div
            class="sc-dSnXvR kYyBno"
          >
            <button
              class="sc-hiKfDv jPHFJK sc-iXeHaJ bA-dtBg"
            >
              Envoyer
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should send piwik event when click no 1`] = `"[]"`;

exports[`<Feedback/> should send piwik event when click yes 1`] = `"[]"`;
